[gd_scene load_steps=8 format=3 uid="uid://dakw6tmvuvou7"]

[ext_resource type="Script" uid="uid://ct3dvueif5qg2" path="res://scenes/menu/story_menu.gd" id="1_yrk5c"]
[ext_resource type="Resource" uid="uid://c4s0d4u5i34m3" path="res://assets/resources/level_list.tres" id="2_3ai1w"]
[ext_resource type="Texture2D" uid="uid://bym6lttxb8cbe" path="res://assets/ui/menu/story/arrows.png" id="8_bittg"]
[ext_resource type="Texture2D" uid="uid://br7jrnns00i1b" path="res://assets/ui/menu/story/difficulties/normal.png" id="8_lfwej"]
[ext_resource type="FontFile" uid="uid://3lcboqej2ls6" path="res://assets/ui/fonts/monoMMM_5.ttf" id="10_0n4na"]
[ext_resource type="LabelSettings" uid="uid://ckiqm8178ehbn" path="res://assets/ui/fonts/alphabet_font_bold.tres" id="10_85cfy"]

[sub_resource type="LabelSettings" id="LabelSettings_ml01f"]
font = ExtResource("10_0n4na")
font_size = 32

[node name="story_menu" type="Node2D"]
script = ExtResource("1_yrk5c")
levels = ExtResource("2_3ai1w")

[node name="black" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="score" type="Label" parent="black"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 358.0
offset_bottom = -665.0
grow_vertical = 2
text = "LEVEL SCORE: 0"
label_settings = SubResource("LabelSettings_ml01f")
vertical_alignment = 1

[node name="tagline" type="Label" parent="black"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -271.0
offset_right = -8.0
offset_bottom = -665.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.995816, 0.983886)
theme_override_colors/font_color = Color(1, 1, 1, 0.701961)
theme_override_fonts/font = ExtResource("10_0n4na")
theme_override_font_sizes/font_size = 32
text = "Story Tagline"
horizontal_alignment = 2
vertical_alignment = 1

[node name="yellow" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 55.0
offset_right = 1280.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.976471, 0.811765, 0.317647, 1)

[node name="level_ui" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 440.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 0

[node name="difficulty" type="Sprite2D" parent="level_ui"]
position = Vector2(1076, 80)
scale = Vector2(0.9, 0.9)
texture = ExtResource("8_lfwej")

[node name="arrow_r" type="Sprite2D" parent="level_ui/difficulty"]
position = Vector2(190, 0)
texture = ExtResource("8_bittg")
hframes = 4
frame = 2

[node name="arrow_l" type="Sprite2D" parent="level_ui/difficulty"]
position = Vector2(-190, 0)
texture = ExtResource("8_bittg")
hframes = 4

[node name="titles" type="BoxContainer" parent="level_ui"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -187.0
offset_top = 20.0
offset_right = 172.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
vertical = true

[node name="title_temp" type="TextureRect" parent="level_ui/titles"]
layout_mode = 2
stretch_mode = 5

[node name="tracks_title" type="Label" parent="level_ui"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 32.0
offset_right = 346.0
offset_bottom = -195.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.898039, 0.341176, 0.466667, 1)
theme_override_fonts/font = ExtResource("10_0n4na")
theme_override_font_sizes/font_size = 45
text = "TRACKS"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="tracks" type="Label" parent="level_ui"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 35.0
offset_right = 346.0
offset_bottom = -20.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.898039, 0.341176, 0.466667, 1)
theme_override_fonts/font = ExtResource("10_0n4na")
theme_override_font_sizes/font_size = 24
text = "

N/A"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="label" type="Label" parent="."]
offset_top = 55.0
offset_right = 1280.0
offset_bottom = 440.0
text = "
"
label_settings = ExtResource("10_85cfy")
